--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -602,6 +602,10 @@
           url: https://sw.wangying.me/v2rayN.zip
           logo: v2rayN.png
           description: Windows系统下的代理软件客户端。
+        - title: Clash
+          url: https://sw.wangying.me/Clash.exe
+          logo: clash.png
+          description: Windows系统下的代理软件客户端。
     - term: 站长之家
       links:
         - title: 阿里云
