--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -71,7 +71,7 @@
           logo: galaxy_project.png
           url: https://galaxyproject.org/
           description: Galaxy Community Hub.
-        - title: R Project
+        - title: Microsoft 365
           logo: r-project.jpg
           url: https://www.r-project.org/
           description: https://www.r-project.org
