--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -21,8 +21,8 @@
       description: 传文件，找文叔叔。
     - title: GitHub
       logo: github.png
-      url: https://github.com/
-      description: GitHub 开源社区。
+      url: https://github.com/ischriswong/nav
+      description: 在线编辑导航网站。
     - title: Apple Music
       logo: applemusic.png
       url: https://music.apple.com/
