--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -339,11 +339,11 @@
           description: 家庭云|网盘|文件备份|资源分享。
         - title: 坚果云
           logo: 坚果云.png
-          usrl: https://www.jianguoyun.com/
+          url: https://www.jianguoyun.com/
           description: 坚果云官网。
         - title: pCloud
           logo: pcloud.png
-          usrl: https://www.pcloud.com/
+          url: https://www.pcloud.com/
           description: 欧洲终身云端硬盘。
     - term: 图标素材
       links:
