--- a/config.toml
+++ b/config.toml
@@ -46,4 +46,4 @@ publishDir            = "public"				# 站点静态文件保存目录
     unsafe = true
 
 [params.footer]
-    copyright = '本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：admin@wangying.me <br/>&copy; 2025 - {year} By [WebStack-Hugo](https://github.com/ischriswong/nav) | [Bio IT 爱好者](https://www.bioitee.com/) | [湘ICP备2023015572号-1](http://beian.miit.gov.cn/)<br/>'
+    copyright = '本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：admin@wangying.me <br/>&copy; 2025 - {year} By [WebStack-Hugo](https://github.com/ischriswong/nav) | [上传图标](https://github.com/ischriswong/nav/tree/main/themes/WebStack-Hugo/static/assets/images/logos) | [湘ICP备2023015572号-1](http://beian.miit.gov.cn/)<br/>'
