--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -649,7 +649,7 @@
         - title: Geek
           url: https://geekuninstaller.com/
           logo: Geek.png
-          description: 最轻量的PDF阅读器。
+          description: 免费电脑清理卸载软件。
         - title: V2rayN
           url: https://sw.wangying.me/v2rayN.zip
           logo: v2rayN.png
