--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -250,7 +250,7 @@
           logo: ddys.png
           url: https://ddys.pro/
           description: https://ddys.pro/。
-    - term: 在线音乐
+    - term: 播客音乐
       links:
         - title: QQ 音乐
           logo: QQ音乐.jpg
