--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -809,6 +809,54 @@
           url: https://chromewebstore.google.com/detail/easy-image-control/clallboofkppmmmhdbjhamfhlhpchbij?hl=zh-CN&utm_source=ext_sidebar
           logo: imageControl.png
           description: 控制网页图片音频等显示。
+        - title: DeepL
+          logo: DeepL.png
+          url: https://chromewebstore.google.com/detail/deepl%EF%BC%9A%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E7%BF%BB%E8%AF%91%E5%99%A8%E5%92%8C%E5%86%99%E4%BD%9C%E5%8A%A9%E6%89%8B/cofdbpoegempjloogbagkncekinflcnj?hl=zh-CN&utm_source=ext_sidebar
+          description: 全世界最准确的翻译器。
+        - title: Boss直聘批量投简历
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/468125-boss-batch-push-boss%E7%9B%B4%E8%81%98%E6%89%B9%E9%87%8F%E6%8A%95%E7%AE%80%E5%8E%86
+          description: Boss直聘批量投简历。
+        - title: 知乎美化
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/402808-%E7%9F%A5%E4%B9%8E%E7%BE%8E%E5%8C%96
+          description: 知乎界面美化。
+        - title: 网盘直链下载助手
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/436446-%E7%BD%91%E7%9B%98%E7%9B%B4%E9%93%BE%E4%B8%8B%E8%BD%BD%E5%8A%A9%E6%89%8B
+          description: 获取网盘文件真实下载地址的油猴脚本。
+        - title: 豆瓣资源下载大师
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/329484-%E8%B1%86%E7%93%A3%E8%B5%84%E6%BA%90%E4%B8%8B%E8%BD%BD%E5%A4%A7%E5%B8%88-1%E7%A7%92%E6%90%9E%E5%AE%9A%E8%B1%86%E7%93%A3%E7%94%B5%E5%BD%B1-%E9%9F%B3%E4%B9%90-%E5%9B%BE%E4%B9%A6%E4%B8%8B%E8%BD%BD
+          description: 豆瓣增强脚本，聚合数百家资源网站。
+        - title: 知乎增强
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/419081-zhihu-enhancement
+          description: 增强版知乎.
+        - title: 自动无缝翻页
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/419215-autopager
+          description: 自动无缝翻页。
+        - title: 网易云音乐直接下载
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/33046-%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90%E7%9B%B4%E6%8E%A5%E4%B8%8B%E8%BD%BD
+          description: 网易云音乐直接下载。
+        - title: 拒绝二维码登录
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/37988-%E6%8B%92%E7%BB%9D%E4%BA%8C%E7%BB%B4%E7%A0%81%E7%99%BB%E5%BD%95
+          description: 默认使用账号密码登录。
+        - title: anti-redirect
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/11915-anti-redirect
+          description: 去除各搜索引擎/常用网站的重定向。
+        - title: 知乎免登录
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/415278-%E7%9F%A5%E4%B9%8E%E5%85%8D%E7%99%BB%E5%BD%95
+          description: 知乎免登陆脚本。
+        - title: Greasyfork 快捷编辑收藏
+          logo: Greasy_Fork.png
+          url: https://greasyfork.org/zh-CN/scripts/439699-greasyfork-script-set-edit-button
+          description: 在脚本信息页添加快速打开收藏集编辑页面功能。
 
 
 - taxonomy: 综合专栏
