--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -242,6 +242,10 @@
           logo: 哔哩哔哩.png
           url: https://www.bilibili.com/
           description: Bilibili 视频弹幕网站。
+        - title: 海盗湾
+          logo: 海盗湾.jpg
+          url: https://thepiratebay.org/
+          description: 全球知名的BT种子分享网站。
         - title: 厂长资源
           logo: czzy.png
           url: https://www.czzy77.com/
@@ -634,6 +638,10 @@
           url: https://sw.wangying.me/IDM.rar
           logo: idm.png
           description: 网络多线程下载神器。
+        - title: qBittorrent
+          url: https://www.qbittorrent.org/
+          logo: qbittorrent.png
+          description: 最好用的BT种子下载器。
         - title: Ditto
           url: https://ditto-cp.sourceforge.io/
           logo: ditto.png
