--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -124,7 +124,7 @@
           url: https://www.cnn.com/
           description: Breaking News, Latest News and Videos.
         - title: Bloomberg
-          logo: Bloomberg.png
+          logo: bloomberg.png
           url: https://www.bloomberg.com/
           description: Business News, Stock Markets, Finance, Breaking ...
         - title: 华尔街日报中文网
