--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -954,14 +954,14 @@
           url: http://doyoudo.com/
           logo: doyoudo.png
           description: 创意设计软件学习平台。
-        - title: 没位道
-          url: http://www.c945.com/web-ui-tutorial/
-          logo: web_ui_tutorial.png
-          description: WEB UI免费视频公开课。
-        - title: 慕课网
-          url: https://www.imooc.com/
-          logo: imooc.png
-          description: 程序员的梦工厂（有UI课程）。
+        - title: 一席
+          url: https://yixi.tv/
+          logo: 一席.png
+          description: 一家通过现场演讲和视频分享高质量知识和观点的传播平台。
+        - title: 多邻国
+          url: https://www.duolingo.com/
+          logo: 多邻国.png
+          description: 语言学习平台。
 
           
 - taxonomy: 职场办公
