--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -301,7 +301,7 @@
         - title: YTS
           logo: yts.png
           url: https://yts.mx/
-          description: 豆一个专注于电影的种子下载网站。
+          description: 一个专注于电影的种子下载网站。
         - title: 海盗湾
           logo: 海盗湾.jpg
           url: https://thepiratebay.org/
